@@ -1,3 +1,15 @@
+Monday, October 01 2001, James Turner
+
+	* Support deffered binding of containers in Entity::recvSight,
+	  using the same policy as 'set' uses; i.e creating a secondary
+	  Set operation and deffering it until after the container is
+	  loaded.
+	* Check for empty location attributes in Entity::recvSight, which
+	  can happen with root / world objects.
+	* Changed various instances of GetAttr("foo").AsXXX to GetFoo() where
+	  I'd forgotten / didn't know a Foo accessor existed; thanks to
+	  alriddoch for catching these.
+
 Thu, 27  Sep  2001 13:50:42 +0100, James Turner
 
 	* Changed inheritance of BaseException; now inherits from std::runtime_error,
